; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/ubifs/extr_scan.c_ubifs_add_snod.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/ubifs/extr_scan.c_ubifs_add_snod.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ubifs_info = type { i32 }
%struct.ubifs_scan_leb = type { i32, i32 }
%struct.ubifs_ch = type { i32, i32, i32 }
%struct.ubifs_ino_node = type { i32 }
%struct.ubifs_scan_node = type { i32, i32, i32, i32, i8*, i32, i32 }

@GFP_NOFS = common dso_local global i32 0, align 4
@ENOMEM = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ubifs_add_snod(%struct.ubifs_info* %0, %struct.ubifs_scan_leb* %1, i8* %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.ubifs_info*, align 8
  %7 = alloca %struct.ubifs_scan_leb*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca %struct.ubifs_ch*, align 8
  %11 = alloca %struct.ubifs_ino_node*, align 8
  %12 = alloca %struct.ubifs_scan_node*, align 8
  store %struct.ubifs_info* %0, %struct.ubifs_info** %6, align 8
  store %struct.ubifs_scan_leb* %1, %struct.ubifs_scan_leb** %7, align 8
  store i8* %2, i8** %8, align 8
  store i32 %3, i32* %9, align 4
  %13 = load i8*, i8** %8, align 8
  %14 = bitcast i8* %13 to %struct.ubifs_ch*
  store %struct.ubifs_ch* %14, %struct.ubifs_ch** %10, align 8
  %15 = load i8*, i8** %8, align 8
  %16 = bitcast i8* %15 to %struct.ubifs_ino_node*
  store %struct.ubifs_ino_node* %16, %struct.ubifs_ino_node** %11, align 8
  %17 = load i32, i32* @GFP_NOFS, align 4
  %18 = call %struct.ubifs_scan_node* @kzalloc(i32 32, i32 %17)
  store %struct.ubifs_scan_node* %18, %struct.ubifs_scan_node** %12, align 8
  %19 = load %struct.ubifs_scan_node*, %struct.ubifs_scan_node** %12, align 8
  %20 = icmp ne %struct.ubifs_scan_node* %19, null
  br i1 %20, label %24, label %21

21:                                               ; preds = %4
  %22 = load i32, i32* @ENOMEM, align 4
  %23 = sub nsw i32 0, %22
  store i32 %23, i32* %5, align 4
  br label %68

24:                                               ; preds = %4
  %25 = load %struct.ubifs_ch*, %struct.ubifs_ch** %10, align 8
  %26 = getelementptr inbounds %struct.ubifs_ch, %struct.ubifs_ch* %25, i32 0, i32 2
  %27 = load i32, i32* %26, align 4
  %28 = call i32 @le64_to_cpu(i32 %27)
  %29 = load %struct.ubifs_scan_node*, %struct.ubifs_scan_node** %12, align 8
  %30 = getelementptr inbounds %struct.ubifs_scan_node, %struct.ubifs_scan_node* %29, i32 0, i32 6
  store i32 %28, i32* %30, align 4
  %31 = load %struct.ubifs_ch*, %struct.ubifs_ch** %10, align 8
  %32 = getelementptr inbounds %struct.ubifs_ch, %struct.ubifs_ch* %31, i32 0, i32 0
  %33 = load i32, i32* %32, align 4
  %34 = load %struct.ubifs_scan_node*, %struct.ubifs_scan_node** %12, align 8
  %35 = getelementptr inbounds %struct.ubifs_scan_node, %struct.ubifs_scan_node* %34, i32 0, i32 0
  store i32 %33, i32* %35, align 8
  %36 = load i32, i32* %9, align 4
  %37 = load %struct.ubifs_scan_node*, %struct.ubifs_scan_node** %12, align 8
  %38 = getelementptr inbounds %struct.ubifs_scan_node, %struct.ubifs_scan_node* %37, i32 0, i32 1
  store i32 %36, i32* %38, align 4
  %39 = load %struct.ubifs_ch*, %struct.ubifs_ch** %10, align 8
  %40 = getelementptr inbounds %struct.ubifs_ch, %struct.ubifs_ch* %39, i32 0, i32 1
  %41 = load i32, i32* %40, align 4
  %42 = call i32 @le32_to_cpu(i32 %41)
  %43 = load %struct.ubifs_scan_node*, %struct.ubifs_scan_node** %12, align 8
  %44 = getelementptr inbounds %struct.ubifs_scan_node, %struct.ubifs_scan_node* %43, i32 0, i32 5
  store i32 %42, i32* %44, align 8
  %45 = load i8*, i8** %8, align 8
  %46 = load %struct.ubifs_scan_node*, %struct.ubifs_scan_node** %12, align 8
  %47 = getelementptr inbounds %struct.ubifs_scan_node, %struct.ubifs_scan_node* %46, i32 0, i32 4
  store i8* %45, i8** %47, align 8
  %48 = load %struct.ubifs_ch*, %struct.ubifs_ch** %10, align 8
  %49 = getelementptr inbounds %struct.ubifs_ch, %struct.ubifs_ch* %48, i32 0, i32 0
  %50 = load i32, i32* %49, align 4
  switch i32 %50, label %58 [
    i32 130, label %51
    i32 131, label %51
    i32 128, label %51
    i32 132, label %51
    i32 129, label %51
  ]

51:                                               ; preds = %24, %24, %24, %24, %24
  %52 = load %struct.ubifs_info*, %struct.ubifs_info** %6, align 8
  %53 = load %struct.ubifs_ino_node*, %struct.ubifs_ino_node** %11, align 8
  %54 = getelementptr inbounds %struct.ubifs_ino_node, %struct.ubifs_ino_node* %53, i32 0, i32 0
  %55 = load %struct.ubifs_scan_node*, %struct.ubifs_scan_node** %12, align 8
  %56 = getelementptr inbounds %struct.ubifs_scan_node, %struct.ubifs_scan_node* %55, i32 0, i32 3
  %57 = call i32 @key_read(%struct.ubifs_info* %52, i32* %54, i32* %56)
  br label %58

58:                                               ; preds = %24, %51
  %59 = load %struct.ubifs_scan_node*, %struct.ubifs_scan_node** %12, align 8
  %60 = getelementptr inbounds %struct.ubifs_scan_node, %struct.ubifs_scan_node* %59, i32 0, i32 2
  %61 = load %struct.ubifs_scan_leb*, %struct.ubifs_scan_leb** %7, align 8
  %62 = getelementptr inbounds %struct.ubifs_scan_leb, %struct.ubifs_scan_leb* %61, i32 0, i32 1
  %63 = call i32 @list_add_tail(i32* %60, i32* %62)
  %64 = load %struct.ubifs_scan_leb*, %struct.ubifs_scan_leb** %7, align 8
  %65 = getelementptr inbounds %struct.ubifs_scan_leb, %struct.ubifs_scan_leb* %64, i32 0, i32 0
  %66 = load i32, i32* %65, align 4
  %67 = add nsw i32 %66, 1
  store i32 %67, i32* %65, align 4
  store i32 0, i32* %5, align 4
  br label %68

68:                                               ; preds = %58, %21
  %69 = load i32, i32* %5, align 4
  ret i32 %69
}

declare dso_local %struct.ubifs_scan_node* @kzalloc(i32, i32) #1

declare dso_local i32 @le64_to_cpu(i32) #1

declare dso_local i32 @le32_to_cpu(i32) #1

declare dso_local i32 @key_read(%struct.ubifs_info*, i32*, i32*) #1

declare dso_local i32 @list_add_tail(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
